--- a/Vezba 27.02.2022/style.css
+++ b/Vezba 27.02.2022/style.css
@@ -5,11 +5,12 @@
 
 .card {
   width: 336px;
-  height: 385px;
+  height: 435px;
   border: solid 1px black;
   border-radius: 10px;
-  margin: 50px;
   display: inline-block;
+  margin-top: 190px;
+  margin-left: 66px;
 }
 .popular {
   float: right;
@@ -33,16 +34,21 @@
 }
 
 .main {
-  padding: 13px 0 0 30px;
+  padding: 39px 0 40px 30px;
   line-height: 31px;
   font-size: 20px;
 }
 
 .button {
-  background-color: blue;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(33, 33, 70, 1) 73%,
+    rgba(0, 212, 255, 1) 100%
+  );
   height: 32px;
   color: white;
-  margin-top: 26px;
+  margin-top: 11px;
   margin-left: 16px;
   margin-right: 16px;
   padding-top: 14px;
@@ -50,7 +56,7 @@
   border-radius: 19px;
 }
 
-.dno {
+.footer {
   margin-left: 24px;
   margin-right: 10px;
   margin-top: 10px;
@@ -60,4 +66,11 @@
   width: 1916px;
   height: 500px;
   padding-left: 69px;
+}
+
+.naslov {
+  font-size: 40px;
+  text-align: center;
+  margin-top: 100px;
+  margin-left: -61px;
 }
