--- a/marketing/style.css
+++ b/marketing/style.css
@@ -1,5 +1,3 @@
-
-
 .home,
 .about,
 .plans,
@@ -8,16 +6,20 @@
   width: 468px;
   font-size: 27px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding-top:10px;
-  background-color:rgb(233, 231, 231);
+  padding-top: 10px;
+  background-color: rgb(233, 231, 231);
   display: inline-block;
-  text-align:center;
-  position:sticky;
-  top:0px;
+  text-align: center;
+  position: sticky;
+  top: 0px;
 }
 
-.header:hover, .home:hover, .about:hover, .plans:hover, .contact:hover {
-  background-color: grey
+.header:hover,
+.home:hover,
+.about:hover,
+.plans:hover,
+.contact:hover {
+  background-color: grey;
 }
 
 .marketing {
@@ -26,7 +28,7 @@
   left: 305px;
   top: 30px;
   font-size: 45px;
-  width:300px;  
+  width: 300px;
 }
 
 .template {
@@ -35,8 +37,7 @@
   position: relative;
   left: 304px;
   top: 25px;
-  width:300px;
-  
+  width: 300px;
 }
 
 .imgmarketing1 {
@@ -62,203 +63,291 @@
 .offer {
   border-bottom: 7px solid gray;
   font-size: 30px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", "Trebuchet MS", sans-serif;
   position: absolute;
   left: 871px;
   top: 880px;
 }
 
 .ponuda {
-    width:1286px;
-    height:224px;
-    position: relative;
-    left:312px;
-    font-size:18px;
-    font-family:font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    top: 230px;
-    }
-
-.card {
-  display:inline-block;
-  width:256px;
-  height:100%;
-  padding-left:38px;
-  padding-right:20px;
-  }
-
-  .pricing {
-    position: relative;
-    top: 316px;
-    left: 767px;
-    width: 379px;
-    height: 136px;
-    text-align: center;
-  }
-
-  .pricing h1 {
-    font-size: 32px;
-  }
-  .pricing p {
-    font-size:21px;
-  }
-
-.karticaContainer {
-position: relative;
-width:1278px;
-height:574px;
-left:312px;
-top:365px;
+  width: 1286px;
+  height: 224px;
+  position: relative;
+  left: 312px;
+  font-size: 18px;
+  font-family: "Gill Sans", "Gill Sans MT", "Trebuchet MS", sans-serif;
+  top: 230px;
 }
 
+.card {
+  display: inline-block;
+  width: 256px;
+  height: 100%;
+  padding-left: 38px;
+  padding-right: 20px;
+}
 
-  .kartica {
-border: 1px solid rgb(189, 188, 188);
-position: absolute;
-width:401px;
-height:100%;
-left:0px;
-top:0px;
+.pricing {
+  position: relative;
+  top: 316px;
+  left: 767px;
+  width: 379px;
+  height: 136px;
+  text-align: center;
+}
 
-  }
+.pricing h1 {
+  font-size: 32px;
+}
+.pricing p {
+  font-size: 21px;
+}
 
-  .karticaHeader {
-border: 1px solid rgb(189, 188, 188);
-position: relative;
-height:114px;
-left:0px;
-top:0px;
-background-color:black;
-color:white;
-text-align: center;    
-  }
+.karticaContainer {
+  position: relative;
+  width: 1278px;
+  height: 574px;
+  left: 312px;
+  top: 365px;
+}
 
-  .karticaHeader h1 {
-    padding-top:11px;
-  }
+.kartica {
+  border: 1px solid rgb(189, 188, 188);
+  position: absolute;
+  width: 401px;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+}
 
-  .karticaText1 {
-border: 1px solid rgb(189, 188, 188);
-position: relative;
-height:61px;
-left:0px;
-top:0px;
-text-align: center;
-  }
+.karticaHeader {
+  border: 1px solid rgb(189, 188, 188);
+  position: relative;
+  height: 114px;
+  left: 0px;
+  top: 0px;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
 
-  .karticaText1 p {
-    font-size:18px;
-    padding-top:3px;
-  }
+.karticaHeader h1 {
+  padding-top: 11px;
+}
 
-  .karticaText2 {
-border: 1px solid rgb(189, 188, 188);
-position: relative;
-width:33,33%;
-height:104px;
-left:0px;
-top:0px;
-text-align: center;
-  }
+.karticaText1 {
+  border: 1px solid rgb(189, 188, 188);
+  position: relative;
+  height: 61px;
+  left: 0px;
+  top: 0px;
+  text-align: center;
+}
 
-  .karticaText2 p {
-    padding-bottom:5px;
-  }
+.karticaText1 p {
+  font-size: 18px;
+  padding-top: 3px;
+}
 
-  .karticaFooter {
-border: 1px solid rgb(189, 188, 188);
-position: relative;
-width:33,33%;
-height:98px;
-left:0px;
-top:0px;
-background-color:rgb(241,241,241);
-color:white;
-text-align: center;
-  }
+.karticaText2 {
+  border: 1px solid rgb(189, 188, 188);
+  position: relative;
+  width: 33, 33%;
+  height: 104px;
+  left: 0px;
+  top: 0px;
+  text-align: center;
+}
 
-  .button {
-    width:98px;
-    height:47px;
-    position: relative;
-    left:164px;
-    top:13px;
-    background-color:rgb(76,175,80);
-    color:white;
-    text-align: center;
-  }
+.karticaText2 p {
+  padding-bottom: 5px;
+}
 
-  .button p {
-    padding-top:14px;
-    padding-left:0px;
-    font-size: 18px;
-  }
-  .represent {
-    position: absolute;
-    top:2233px;
-    left:861px;
-    border-bottom: 7px solid gray;
+.karticaFooter {
+  border: 1px solid rgb(189, 188, 188);
+  position: relative;
+  width: 33, 33%;
+  height: 98px;
+  left: 0px;
+  top: 0px;
+  background-color: rgb(241, 241, 241);
+  color: white;
+  text-align: center;
+}
+
+.button {
+  width: 98px;
+  height: 47px;
+  position: relative;
+  left: 164px;
+  top: 13px;
+  background-color: rgb(76, 175, 80);
+  color: white;
+  text-align: center;
+}
+
+.button p {
+  padding-top: 14px;
+  padding-left: 0px;
+  font-size: 18px;
+}
+.represent {
+  position: absolute;
+  top: 2233px;
+  left: 861px;
+  border-bottom: 7px solid gray;
   font-size: 30px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  }
+}
 
-  .representing {
+.representing {
   position: relative;
-  width:1278px;
-  height:542px;
-  left:312px;
-  top:592px;
-  
-  }
+  width: 1278px;
+  height: 542px;
+  left: 312px;
+  top: 592px;
+}
 
-  .representingCard {
-    position: absolute;
-    border:1px solid;
-    width:400px;
-    height:100%;
-    box-shadow: 5px 5px 5px 5px #888888;
-  }
-  .representingheader {
-    position: absolute;
-    border:1px solid;
-    width:100%;
-    height:50%;
-  }
+.representingCard {
+  position: absolute;
+  width: 400px;
+  height: 100%;
+  box-shadow: 3px 3px 3px 3px #888888;
+}
 
-  .representingfooter {
-    position: absolute;
-    bottom:0px;
-    border:1px solid;
-    background-color:rgb(241,241,241);
-    width:358px;
-    height:44px;
-    margin-left:18px;
-    margin-bottom:10px;
-    text-align: center;
-    padding-top:19px;
-    font-size:24px;
-  }
+.representingheader {
+  position: absolute;
+  border: 1px solid;
+  width: 100%;
+  height: 50%;
+}
 
-  .representingtext {
-    position: absolute;
-    width:376px;
-    height:184px;
-    top:50%;
-    padding-left:24px;
-  }
+.representingfooter {
+  position: absolute;
+  bottom: 0px;
+  border: 1px solid;
+  background-color: rgb(241, 241, 241);
+  width: 358px;
+  height: 44px;
+  margin-left: 18px;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-top: 19px;
+  font-size: 24px;
+}
 
-  .slikadiv {
-position: absolute;
-    width:100%;
-    height:100%;
-  }
+.representingtext {
+  position: absolute;
+  width: 376px;
+  height: 184px;
+  top: 50%;
+  padding-left: 24px;
+}
 
-  .representingfooter:hover {
-    background-color:grey;
-    cursor: pointer;
-  }
+.slikadiv {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 
-  .button:hover {
-    background-color:grey;
-    cursor: pointer;
-    
-  }
+.representingfooter:hover {
+  background-color: grey;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: grey;
+  cursor: pointer;
+}
+
+.representcontact {
+  position: absolute;
+  top: 3009px;
+  left: 861px;
+  border-bottom: 7px solid gray;
+  font-size: 30px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.contact-box {
+  width: 1286px;
+  height: 364px;
+  box-shadow: 10px;
+  top: 3079px;
+  left: 311px;
+  position: absolute;
+}
+
+form {
+  padding-top: 35px;
+  padding-left: 35px;
+}
+
+.input-field {
+  width: 89%;
+  height: 42px;
+  padding-left: 76px;
+  margin: 13px;
+}
+
+.btn {
+  width: 96%;
+  height: 47px;
+  padding-left: 76px;
+  margin: 13px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+
+.btn:hover {
+  background-color: grey;
+}
+
+.footer {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  background: rgb(241, 241, 241);
+  top: 3584px;
+}
+
+.footer h3 {
+  text-align: center;
+  top: 16%;
+  position: relative;
+  font-size: 29px;
+}
+
+.btnfooter {
+  text-align: center;
+  background: black;
+  color: white;
+  position: relative;
+  top: 14%;
+  width: 158px;
+  height: 54px;
+  left: 885px;
+  font-size: 18px;
+}
+
+.sclmedia {
+  position: relative;
+  width: 230px;
+  height: 36px;
+  top: 114px;
+  left: 683px;
+  display: inline-block;
+  font-size: 31px;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.footer p {
+  text-align: center;
+  position: relative;
+  top: 87px;
+  left: 10px;
+  font-size: 23px;
+}
